--- a/index.html
+++ b/index.html
@@ -7,91 +7,116 @@
     <link rel="stylesheet" href="css/styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <title>Hello, world!</title>
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
+   <nav class="navbar">
+    <div class="row">
+      <div class="col">
+        <ul class="list-unstyled">
+          <li>
+            <a href="#" class="text-reset fw-bolder text-decoration-none">Moqups</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-
-    <div class="container">
-      <ul class="list-group">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
-      </ul>
+      <div class="col col-sm-12 col-md-6">
+        <ul class="list-unstyled d-flex">
+          <li>
+            <a href="#speakers">Speakers</a>
+          </li>
+          <li>Tickets</li>
+          <li>Venue</li>
+        </ul>
+      </div>
     </div>
 
-    <div class="mt-5 pt-5 pb-5 footer">
+    <section class="jumbotron text-light d-flex flex-column justify-content-center align-items-center">
+      <h2>Clear Statement about Your Event</h2>
+      <h3>Secondary header providing additional invormation</h3>
+      <button class="text-uppercase">Get The Ticket</button>
+    </section>
+
+    <hr>
+
+    <section id="speakers" class="my-5 d-flex flex-column justify-content-center">
+      <h2 class="my-2">The Speakers</h2>
+      <h3>A few lines about the event speakers to highlight their expertise in the field.</h3>
+      <div class="container">
+        <div class="row my-4">
+          <div class="col col-3 px-2">
+            <img src="../event-landing-page/img/img2.jpg" alt="" class="img-fluid">
+            <h4>Ruby Jennings</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio quaerat debitis ipsum neque beatae. Iusto, ut reiciendis. Sint est et facilis cum aut iste repudiandae quidem id, dolores numquam nam.</p>
+          </div>
+          <div class="col col-3 px-2">
+            <img src="../event-landing-page/img/img1.jpg" alt="" class="img-fluid">
+            <h4>Leon Hanson</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio quaerat debitis ipsum neque beatae. Iusto, ut reiciendis. Sint est et facilis cum aut iste repudiandae quidem id, dolores numquam nam.</p>
+          </div>
+          <div class="col col-3 px-2">
+            <img src="../event-landing-page/img/img3.jpg" alt="" class="img-fluid">
+            <h4>Meghan Stone</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio quaerat debitis ipsum neque beatae. Iusto, ut reiciendis. Sint est et facilis cum aut iste repudiandae quidem id, dolores numquam nam.</p>
+          </div>
+          <div class="col col-3 px-2">
+            <img src="../event-landing-page/img/img4.jpg" alt="" class="img-fluid">
+            <h4>Willie Perkins</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio quaerat debitis ipsum neque beatae. Iusto, ut reiciendis. Sint est et facilis cum aut iste repudiandae quidem id, dolores numquam nam.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <hr>
+
+    <section id="tickets">
+      <h2>Get Your Ticket Today!</h2>
+      <p>Each ticket includes: 20 speakers, 1000 participants, 15 sessions, 5 keynotes.</p>
+      <button class="text-uppercase text-light btn-primary rounded">Buy Ticket $149</button>
+    </section>
+    <section id="venue">
       <div class="container">
         <div class="row">
-          <div class="col-lg-5 col-xs-12 about-company">
-            <h2>Heading</h2>
-            <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
-            <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
+          <div class="col col-md-6 col-sm-12 align-items-center">
+            <h2>The Venue</h2>
+            <p>Our event will be held at the Main Office headquarters at Provost & East Building 145</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.0525142327897!2d-122.29105878387941!3d37.8122389244727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f80a0120a9cf7%3A0xf6b3c6bc1a77cca3!2sDe%20Fremery%20Park!5e0!3m2!1sen!2sus!4v1665098366561!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-          <div class="col-lg-3 col-xs-12 links">
-            <h4 class="mt-lg-0 mt-sm-3">Links</h4>
-              <ul class="m-0 p-0">
-                <li>- <a href="#">Lorem ipsum</a></li>
-                <li>- <a href="#">Nam mauris velit</a></li>
-                <li>- <a href="#">Etiam vitae mauris</a></li>
-                <li>- <a href="#">Fusce scelerisque</a></li>
-                <li>- <a href="#">Sed faucibus</a></li>
-                <li>- <a href="#">Mauris efficitur nulla</a></li>
-              </ul>
-          </div>
-          <div class="col-lg-4 col-xs-12 location">
-            <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-            <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
-            <p class="mb-0"><i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
-            <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
-          </div>
-        </div>
-        <div class="row mt-5">
-          <div class="col copyright">
-            <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+          <div class="venue-photograph col col-md-6 col-sm-12 d-flex align-items-center">
           </div>
         </div>
       </div>
+    </section>
+    <hr>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-facebook"></i>
+          </div>
+          <div class="col">
+            <p>&copy; 2019 Moqups</p>
+          </div>
+        </div>
       </div>
+    </footer>
+
+
+   </nav>
+
+
+
+
+
+
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
