--- a/index.html
+++ b/index.html
@@ -8,27 +8,35 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Barlow&family=Bungee+Hairline&family=Dosis&family=Encode+Sans+SC&family=IBM+Plex+Mono:wght@300&family=IM+Fell+English+SC&family=Michroma&family=Montserrat+Subrayada&family=Montserrat:ital,wght@0,300;1,100&family=Nanum+Myeongjo&family=Noto+Serif+HK:wght@200&family=Odibee+Sans&family=Play&family=Prompt:wght@300&family=Raleway:wght@300&family=Rubik+Dirt&family=Russo+One&family=Silkscreen&family=Staatliches&family=Ubuntu&display=swap" rel="stylesheet">
 
     <title>Hello, world!</title>
   </head>
   <body>
 
-   <nav class="navbar">
-    <div class="row">
-      <div class="col">
+   <nav class="container fs-5">
+    <div class="row pt-4">
+      <div class="col-sm-12 col-md-6 text-md-start text-sm-center">
         <ul class="list-unstyled">
-          <li>
-            <a href="#" class="text-reset fw-bolder text-decoration-none">Moqups</a>
+          <li class="list-inline-item">
+            <a href="#" class="text-reset fw-bolder text-decoration-none">Annual Community Speakers Series</a>
           </li>
         </ul>
       </div>
-      <div class="col col-sm-12 col-md-6">
-        <ul class="list-unstyled d-flex">
-          <li>
-            <a href="#speakers">Speakers</a>
+
+      <div class="col-sm-12 col-md-6 text-md-end text-sm-center">
+        <ul class="list-unstyled d-md-flex justify-content-md-end">
+          <li class="list-inline-item">
+            <a href="#speakers" class="text-reset text-decoration-none fw-bolder">Speakers</a>
           </li>
-          <li>Tickets</li>
-          <li>Venue</li>
+          <li class="list-inline-item">
+            <a href="#tickets" class="text-reset text-decoration-none fw-bolder">Tickets</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#venue" class="text-reset text-decoration-none fw-bolder">Venue</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -40,7 +48,7 @@
     </section>
 
     <hr>
-
+    
     <section id="speakers" class="my-5 d-flex flex-column justify-content-center">
       <h2 class="my-2">The Speakers</h2>
       <h3>A few lines about the event speakers to highlight their expertise in the field.</h3>
@@ -77,6 +85,8 @@
       <p>Each ticket includes: 20 speakers, 1000 participants, 15 sessions, 5 keynotes.</p>
       <button class="text-uppercase text-light btn-primary rounded">Buy Ticket $149</button>
     </section>
+
+    
     <section id="venue">
       <div class="container">
         <div class="row">
