--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       </div>
     </div>
 
-    <section class="jumbotron text-light d-flex flex-column justify-content-center align-items-center">
-      <h2>Clear Statement about Your Event</h2>
-      <h3>Secondary header providing additional invormation</h3>
-      <button class="text-uppercase">Get The Ticket</button>
+    <section class="jumbotron text-dark d-flex flex-column justify-content-center align-items-center">
+      <h2 class="display-2">Join the crowd</h2>
+      <h3 class="mt-2">A chance to connect with your neighbors</h3>
+      <button class="btn btn-success text-uppercase mt-4">Reserve Your Spot</button>
     </section>
 
     <hr>
