updated speakers and tickets sections

--- a/index.html
+++ b/index.html
@@ -50,29 +50,33 @@
     <hr>
     
     <section id="speakers" class="my-5 d-flex flex-column justify-content-center">
-      <h2 class="my-2">The Speakers</h2>
-      <h3>A few lines about the event speakers to highlight their expertise in the field.</h3>
+      <h2 class="my-2 display-4">The Speakers</h2>
+      <h3 class="fs-4">This years speaker series features a diverse array of community voices and thought leaders.</h3>
       <div class="container">
         <div class="row my-4">
           <div class="col col-3 px-2">
             <img src="../event-landing-page/img/img2.jpg" alt="" class="img-fluid">
             <h4>Ruby Jennings</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio quaerat debitis ipsum neque beatae. Iusto, ut reiciendis. Sint est et facilis cum aut iste repudiandae quidem id, dolores numquam nam.</p>
+            <p>Sales Manager at Moqups. Runner, parent and kale lover.</p>
+            <p>@rjennings</p>
           </div>
           <div class="col col-3 px-2">
             <img src="../event-landing-page/img/img1.jpg" alt="" class="img-fluid">
             <h4>Leon Hanson</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio quaerat debitis ipsum neque beatae. Iusto, ut reiciendis. Sint est et facilis cum aut iste repudiandae quidem id, dolores numquam nam.</p>
+            <p>Product Manager at Moqups. Runner, parent and crunchwrap lover.</p>
+            <p>@lhanson</p>
           </div>
           <div class="col col-3 px-2">
             <img src="../event-landing-page/img/img3.jpg" alt="" class="img-fluid">
             <h4>Meghan Stone</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio quaerat debitis ipsum neque beatae. Iusto, ut reiciendis. Sint est et facilis cum aut iste repudiandae quidem id, dolores numquam nam.</p>
+            <p>Marketing Specialist at Moqups. Runner, parent and coffee lover.</p>
+            <p>@mstone</p>
           </div>
           <div class="col col-3 px-2">
             <img src="../event-landing-page/img/img4.jpg" alt="" class="img-fluid">
             <h4>Willie Perkins</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio quaerat debitis ipsum neque beatae. Iusto, ut reiciendis. Sint est et facilis cum aut iste repudiandae quidem id, dolores numquam nam.</p>
+            <p>UX Engineer at Moqups. Runner, parent and plant lover.</p>
+            <p>@wperkins</p>
           </div>
         </div>
       </div>
@@ -80,12 +84,13 @@
 
     <hr>
 
-    <section id="tickets">
-      <h2>Get Your Ticket Today!</h2>
-      <p>Each ticket includes: 20 speakers, 1000 participants, 15 sessions, 5 keynotes.</p>
-      <button class="text-uppercase text-light btn-primary rounded">Buy Ticket $149</button>
+    <section id="tickets" class="d-flex flex-column justify-content-center">
+      <h2 class="display-3">Get Your Ticket Today!</h2>
+      <p class="fs-4">Each ticket includes: 20 speakers, 1000 participants, 15 sessions, 5 keynotes.</p>
+      <button class="btn btn-primary text-uppercase text-light rounded">Buy Ticket $149</button>
     </section>
 
+    <hr>
     
     <section id="venue">
       <div class="container">
