--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <section class="jumbotron text-dark d-flex flex-column justify-content-center align-items-center">
-      <h2 class="display-2">Join the crowd</h2>
+      <h2 class="display-2">Join the community</h2>
       <h3 class="mt-2">A chance to connect with your neighbors</h3>
       <button class="btn btn-success text-uppercase mt-4">Reserve Your Spot</button>
     </section>
