--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Barlow&family=Bungee+Hairline&family=Dosis&family=Encode+Sans+SC&family=IBM+Plex+Mono:wght@300&family=IM+Fell+English+SC&family=Michroma&family=Montserrat+Subrayada&family=Montserrat:ital,wght@0,300;1,100&family=Nanum+Myeongjo&family=Noto+Serif+HK:wght@200&family=Odibee+Sans&family=Play&family=Prompt:wght@300&family=Raleway:wght@300&family=Rubik+Dirt&family=Russo+One&family=Silkscreen&family=Staatliches&family=Ubuntu&display=swap" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <title>Annual Community Speakers Series</title>
   </head>
   <body>
 
@@ -95,13 +95,17 @@
     <section id="venue">
       <div class="container">
         <div class="row">
+
           <div class="col col-md-6 col-sm-12 align-items-center">
             <h2>The Venue</h2>
             <p>Our event will be held at the Main Office headquarters at Provost & East Building 145</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.0525142327897!2d-122.29105878387941!3d37.8122389244727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f80a0120a9cf7%3A0xf6b3c6bc1a77cca3!2sDe%20Fremery%20Park!5e0!3m2!1sen!2sus!4v1665098366561!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-          <div class="venue-photograph col col-md-6 col-sm-12 d-flex align-items-center">
+
+          <div class="col col-md-6 col-sm-12">
+            <img src="../event-landing-page/img/bg2.jpg" alt="" class="img-fluid">
           </div>
+
         </div>
       </div>
     </section>
